# algo-lab

./: .gitignore  LICENSE  README.md  requirements.txt
3d-engine/: 3d_engine.py
adjacent/: README.md  pyproject.toml
adjacent/adjacent/: __init__.py  cycles.py  misc.py  sort.py  traversal.py  utils.py
adjacent/examples/: test.py
autodiff/: README.md  pyproject.toml
autodiff/autodiff/: __init__.py
autodiff/examples/: expression.py
cellular-automata/: brians_brain.py  conways_game_of_life.py  langtons_ant.py  predator_and_prey.py  wire_world.py
data-utils/: base64_encoder.py
diabetes-diary/: Diatrac.db  db.py  main.py
ees-project/: auto_report.py  auto_report_1.0.py  auto_report_1.1.py  auto_report_1.2.py  auto_report_1.3.py  auto_report_1.4.py  auto_report_1.5.0.py  auto_report_1.5.1.py  auto_report_1.5.py  auto_report_1.6.0.py  auto_report_1.6.1.py  auto_report_1.6.2.py  auto_report_1.6.3.py  auto_report_1.6.4.py  auto_report_1.6.5.py  auto_report_full_release_1.6.6.py  auto_report_full_release_1.6.7.py  auto_report_full_release_1.6.8.py  auto_report_full_release_1.6.9.py  auto_report_full_release_1.7.0.py  auto_report_full_release_1.7.1.py  auto_report_full_release_1.7.2.py  auto_report_full_release_1.7.3.py  password_hasher.py  webserver.py
file-utils/: image_background_extender.py  pdf_to_image.py  pywrap.py
games/: snake.py
general-algorithms/: random_deviates.py
gpt/: README.md  gpt3-demo.py  pyproject.toml
gpt/data/: tinyshakespeare.tkn
gpt/gpt/tokeniser/: base.py  basic.py
graph-algorithms/: dag_topoligical_sorting.py  (+3 more)
(+255 files in other folders)
